--- a/index.html
+++ b/index.html
@@ -19,7 +19,22 @@
   
      
   <div class="container home">
-   
+   <header>
+     <h1>Fun Bus</h1>
+     <nav>
+       <a href="#">Home</a>
+       <a href="#">About us</a>
+       <a href="#">Blog</a>
+       <a href="#">Contact</a>
+     </nav>
+     
+   </header>
+   <img src="/img/fun-bus.jpg">
+   <div class="intro">
+    <h2>Welcome To Fun Bus!</h2>
+    <p>Traveling expedition modern, clean webdesign blooger clean website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expediton.</p>
+   </div>
+  
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
